# aliquid-approxsim

./: CMakeLists.txt  README.md  StartClient.bat  StartDispatcher.bat  StartServer.bat  StartServer.command  stratmas_i386_rh9  version
ApproximServer/src/: .gitignore  Engine.h  Environment.cpp  ValidParameterGroups.h  appinfo.h.in.cmake
ApproxsimClient/: .project
ApproxsimClient/buildutils/: StartClient.bat
ApproxsimServer/src/: Action.h  Environment.h  GoodStuff.h  PresenceObject.h  PresenceObjectAllocator.h  Reference.cpp  Reference.h
Naming/: Approximate.psd  Approxsim.psd  logo_pattern.psd  triangular_@2X.psd
StratmasClient/: .classpath  .gitignore  .project  BuildClient.command  Client.launch  StartSubstrateEditor.bat  StartSubstrateEditor.command  build.xml  gurkascn.scn
StratmasClient/.externalToolBuilders/: ant_Builder.launch
StratmasClient/src/: AboutBox.java  (+11 more)
StratmasDispatcher/: BuildDispatcher.command  build.xml
StratmasServer/: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README  README.md  StratmasServer.sublime-build  StratmasServer.sublime-project  stratmas_x86_64
StratmasServer/dependencies/boost/1.33.1/i386_rh9/lib/: libboost_date_time-gcc-d-1_33_1.so.1.33.1  libboost_program_options-gcc-1_33_1.so.1.33.1  libboost_thread-gcc-mt-1_33_1.so.1.33.1
StratmasServer/dependencies/boost/1.33.1/ppc_macosx/lib/: libboost_date_time-1_33_1.dylib  libboost_date_time-d-1_33_1.dylib  libboost_filesystem-d-1_33_1.dylib  libboost_thread-d-1_33_1.dylib
StratmasServer/dependencies/xerces/2.7.0/i386_rh9/lib/: libxerces-depdom.so.27.0
StratmasServer/dependencies/xerces/2.7.0/ppc_macosx/lib/: libxerces-depdom.dylib
StratmasServer/src/: .CMakeLists.txt.swp  AccessRightHandler.cpp  Action.h  Activity.cpp  Activity.h  Agency.cpp  AgencyFactory.cpp  AgencyFactory.h  AreaHandler.cpp  BasicGrid.cpp  Buffer.cpp  Buffer.h  CMakeLists.txt  Camp.h  City.cpp  ClusterSet.cpp  DataObjectImpl.cpp  Element.cpp  Engine.cpp  Engine.h  Environment.cpp  Environment.h  EpidemicsWeights.h  Error.cpp  Error.h  GoodStuff.h  Grid.cpp  GridCell.cpp  GridCell.h  GridEffect.h  GridPartitioner.h  GridPos.h  IOHandler.cpp  IPAddress.cpp  IPValidator.h  LogStream.cpp  Map.cpp  Map.h  Mapper.h  MemEntityResolver.cpp  (+59 more)
StratmasServer/src/Agencies/: Agency.cpp  Agency.h  AgencyFactory.cpp
StratmasServer/src/DataManagment/: AccessRightHandler.h  ChangeTrackerAdapter.cpp  ChangeTrackerAdapter.h
StratmasServer/src/Debug/: PropertyHandler.cpp  debugheader.h
StratmasServer/src/Geo/: AreaHandler.cpp  AreaHandler.h  BasicGrid.cpp  BasicGrid.h  CellGroup.cpp  CombatGrid.cpp  Ellipse.cpp  Ellipse.h  Grid.cpp  GridCell.cpp  GridCellPV.cpp  GridDataHandler.cpp  GridEffect.h  GridPos.h  Map.cpp  Projection.cpp
StratmasServer/src/Graph/: Graph.cpp  Graph.h
StratmasServer/src/Grid/: CellGroup.h  CombatGrid.h  Ellipse.h  Grid.h  GridCellPV.cpp  LatLng.h  Shape.h  gpc.h
StratmasServer/src/Logging/: Log4C.cpp  Log4C.h  SyslogSink.cpp  WinEventSink.cpp  WinEventSink.h
StratmasServer/src/Network/: Buffer.cpp  Buffer.h  ClientValidator.h  ClusterSet.h  IOHandler.h  IPAddress.h  IPValidator.h  PosixSocket.cpp  Server.cpp  Server.h  Session.cpp  Session.h  Socket.h  SocketException.h  SocketImpl.h  StratmasMessage.cpp  StratmasMessage.h  StratmasServerSocket.cpp  StratmasSocket.cpp  Subscription.cpp  WinSocket.cpp
StratmasServer/src/PV/: PVRegion.cpp  PVRegion.h  ProcessVariables.h
StratmasServer/src/SimulationObjects/: Disease.cpp  Distribution.cpp  Distribution.h  Faction.h  GridPartitioner.h  Region.cpp  Region.h  SOFactory.cpp  SOFactory.h  SOMapper.h  Scenario.cpp  Scenario.h  Simulation.cpp  Simulation.h  SimulationObject.h  TimeStepper.h  UpdatableSOAdapter.cpp  UpdatableSOAdapter.h
StratmasServer/src/SimulationObjects/Activities/: Activity.cpp  Activity.h
StratmasServer/src/SimulationObjects/Elements/: AgencyTeam.cpp  AgencyTeam.h  Camp.h  Element.h  Unit.cpp  Unit.h
StratmasServer/src/StratmasServer/: AreaHandler.cpp  Camp.h  CombatGrid.h  DataObjectImpl.cpp  Distribution.cpp  Element.cpp  Faction.h  GridDataHandler.h  MemEntityResolver.h  PVArea.h  PVInfo.cpp  ParserErrorReporter.h  ProjCoord.cpp  Registrator.h  SOMapper.cpp  Session.h  Shape.cpp  Shape.h  StrX.h  TypeAttribute.cpp  XMLHandler.cpp  XMLHandler.h  XSDContent.cpp  stdint.h
StratmasServer/src/Taclan/: DataObject.h  DataObjectImpl.cpp  DataObjectImpl.h  Declaration.h  MemEntityResolver.h  RegionFile.h  StrX.h  Type.cpp  Type.h  TypeAttribute.cpp  TypeDefinition.cpp  TypeDefinition.h  TypeFactory.cpp  TypeFactory.h  XMLHandler.cpp  XMLHandler.h  XMLHelper.cpp  XMLHelper.h  XSDContent.h
StratmasServer/src/logging/: LogStream.h  WinEventSink.cpp
StratmasServer/src/schemas/: file2h.c  file2h.cpp  processVariables.xsd
StratmasServer/test/: CMakeLists.txt  test.h
StratmasServer/tools/StratmasDispatcher/: ConnectionHandler.java  StratmasDispatcher.java  StratmasServer.java  StreamInput.java  build.xml
StratmasServer/tools/StratmasDispatcher/schemas/: Makefile  processVariables.xsd  stratmasProtocol.xsd
StratmasServer/tools/share/cmake/: External-Boost.cmake  FindXercesC.cmake  Log4Cxx.patch
client/: Client.launch  build.xml
dispatcher/: build.xml
samples/: processVariables.prv
server/: .gitignore  ApproxsimServer.sublime-project  CMakeLists.txt  README
shared_schemas/: substrateXML.xsd  substrateXML_IO.xsd  taclan2sim.xsd
src/: CMakeLists.txt
src/StratmasServer/: AccessRightHandler.cpp  AgencyTeam.cpp  AgencyTeam.h  BasicGrid.h  CellGroup.h  ChangeTrackerAdapter.h  City.cpp  City.h  ClusterSet.h  Disease.h  Ellipse.cpp  Engine.cpp  Error.h  GoodStuff.h  Grid.cpp  GridCell.h  GridCellPV.cpp  GridDataHandler.cpp  GridPos.h  IOHandler.h  IPAddress.h  IPValidator.cpp  Lockable.h  Map.cpp  Mapper.h  MemEntityResolver.cpp  PVInfo.h  ParameterGroup.h  PosixSocket.cpp  PresenceObject.cpp  ProcessVariables.cpp  ProjCoord.h  Reference.cpp  Registrator.cpp  SOFactory.cpp  Server.cpp  Server.h  Simulation.cpp  SimulationObject.cpp  SocketException.h  (+22 more)
src/StratmasServer/schemas/: processVariables.xsd
(+2447 files in other folders)
